--- a/assets/sass/component/attractions/_destinations.scss
+++ b/assets/sass/component/attractions/_destinations.scss
@@ -11,7 +11,7 @@ margin-top: 15vh;
 	}
 
 	&__introduce{
-		margin-top: $border-radius-small;
+		margin-top: $margin-big;
 		color:$color-accent-dark;
 	}
 
