--- a/assets/sass/component/stay/_hotel.scss
+++ b/assets/sass/component/stay/_hotel.scss
@@ -72,7 +72,7 @@
 		position: absolute;
 		top:-$margin-large;
 		font-size:$font-title-footer-sub ;
-		margin-left: -$margin-base-large;
+		margin-left: -$margin-big;
 
 		&::before{
 			display: inline-block;
