--- a/assets/sass/variable/_layout.scss
+++ b/assets/sass/variable/_layout.scss
@@ -1,17 +1,13 @@
+// margin padding
 $margin-small:10px;
 $margin-base: 20px;
-$margin-base-large:25px;
+$margin-base-big:25px;
+$margin-big:30px;
 $margin-large: 40px;
-$margin-big: 50px;
+$margin-base-hue: 50px;
 $margin-hue:150px;
 
-$padding-small: 10px;
-$padding-base: 20px;
-$padding-large: 40px;
-$padding-big: 50px;
-
 $navbar-height:100px;
-$header-title:100px;
 $footer-height:300px;
 $footer-background:200px;
 $main-section-height:250px;
