--- a/assets/sass/component/attractions/_tourist-spots.scss
+++ b/assets/sass/component/attractions/_tourist-spots.scss
@@ -6,7 +6,7 @@
 			width: 11.72%;
 			max-width: 11.72%;
 			background-color: $color-accent;
-			padding: $padding-base $padding-large;
+			padding: $margin-base $margin-large;
 			margin-bottom: $margin-large;
 			text-align: center;
 			border-radius: $border-radius-base;
