--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -31,3 +31,6 @@
 @import 'component/attractions/destinations';
 // news
 @import 'component/news/info';
+// events
+@import 'component/events/events';
+@import 'component/events/detal';
