--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,7 @@ table {
       flex-wrap: wrap;
 }
 
-.header__about-us__container, .header__stay__container, .header__attractions__container, .header__news__container {
+.header__about-us__container, .header__stay__container, .header__attractions__container, .header__news__container, .header__events__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -123,7 +123,7 @@ table {
           align-items: flex-end;
 }
 
-.header__home, .header__about-us, .header__stay, .header__attractions, .header__news, .footer::before {
+.header__home, .header__about-us, .header__stay, .header__attractions, .header__news, .header__events, .footer::before {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -156,7 +156,7 @@ header {
   height: 80vh;
 }
 
-.header__about-us__container, .header__stay__container, .header__attractions__container, .header__news__container {
+.header__about-us__container, .header__stay__container, .header__attractions__container, .header__news__container, .header__events__container {
   position: absolute;
   bottom: 0;
   background-color: #ffffff;
@@ -165,14 +165,14 @@ header {
   border-top-right-radius: 50px;
 }
 
-.header__about-us__container__title, .header__stay__container__title, .header__attractions__container__title, .header__news__container__title {
+.header__about-us__container__title, .header__stay__container__title, .header__attractions__container__title, .header__news__container__title, .header__events__container__title {
   color: #123C62;
   font-size: 1.5rem;
   padding-bottom: 10px;
   padding-left: 30px;
 }
 
-.header__about-us__container img, .header__stay__container img, .header__attractions__container img, .header__news__container img {
+.header__about-us__container img, .header__stay__container img, .header__attractions__container img, .header__news__container img, .header__events__container img {
   width: 70px;
   height: 70px;
 }
@@ -299,6 +299,11 @@ a {
 .header__news__container img {
   -webkit-transform: rotate(90deg);
           transform: rotate(90deg);
+}
+
+.header__events {
+  background-image: url(../public/picture/header-cover/events.png);
+  position: relative;
 }
 
 main {
@@ -775,5 +780,131 @@ main {
 .info__container p {
   padding-top: 20px;
   text-align: justify;
+}
+
+.events {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.events__cards {
+  width: 450px;
+  height: 470px;
+  margin-bottom: 40px;
+}
+
+.events__cards__image {
+  width: 100%;
+  margin: 0 auto;
+  border-radius: 30px;
+}
+
+.events__cards__info {
+  margin-top: 30px;
+}
+
+.events__cards__info__date {
+  color: #123C62;
+}
+
+.events__cards__info__title {
+  position: relative;
+  margin-top: 20px;
+  font-size: 1.125rem;
+  color: #123C62;
+}
+
+.events__cards__info__title span {
+  position: absolute;
+  right: 0;
+  font-size: 0.875rem;
+  background-color: #8FC7F9;
+  border-radius: 10px;
+}
+
+.events__cards__info__title span a {
+  color: #ffffff;
+  padding: 20px 10px;
+}
+
+.detal {
+  border-bottom: 2px solid #8FC7F9;
+}
+
+.detal__title {
+  padding: 20px 0;
+  padding-left: 100px;
+  font-size: 1.375rem;
+  background-color: #8FC7F9;
+  color: #ffffff;
+}
+
+.detal__image {
+  width: 100%;
+}
+
+.detal__info {
+  margin-top: 80px;
+  margin-bottom: 100px;
+  color: #123C62;
+  text-align: justify;
+}
+
+.detal__date {
+  margin-bottom: 50px;
+  color: #123C62;
+}
+
+.detal__back {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  margin-top: 20px;
+  font-size: 1.125rem;
+}
+
+.detal__back a {
+  color: #8FC7F9;
+}
+
+.detal__back__button {
+  position: relative;
+  margin-right: 10px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #8FC7F9;
+}
+
+.detal__back__button::before, .detal__back__button::after {
+  position: absolute;
+  display: block;
+  top: 8px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 13px;
+  height: 2px;
+  margin: auto;
+  background-color: #ffffff;
+  content: '';
+  border-radius: 1px;
+  -webkit-transform: rotate(-135deg);
+          transform: rotate(-135deg);
+}
+
+.detal__back__button::after {
+  top: -8px;
+  -webkit-transform: rotate(135deg);
+          transform: rotate(135deg);
 }
 /*# sourceMappingURL=style.css.map */
