--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -94,4 +94,18 @@ header {
 			}
 		}
 	}
+	&__food{
+		@extend %background-img-position;
+		background-image: url(../public/picture/header-cover/food.jpg);
+		position: relative;
+		&__container{
+			@extend %layout-header-section;
+			&__title{
+				@extend %layout-header-title;
+			}
+			img{
+				@extend %layout-header-icon;
+			}
+		}
+	}
 }
