--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -34,3 +34,6 @@
 // events
 @import 'component/events/events';
 @import 'component/events/detal';
+// food
+@import 'component/food/food';
+@import 'component/food/food-info';
