--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1034,6 +1034,179 @@ main {
   text-align: justify;
 }
 
+.traffic__ship__tables {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 900px;
+  background-color: #8FC7F9;
+  margin: 40px auto;
+  overflow: hidden;
+  padding-bottom: 40px;
+  position: relative;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+}
+
+.traffic__ship__tables span {
+  display: inline-block;
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  background-color: white;
+  border-radius: 50%;
+  bottom: -27px;
+  left: 0;
+}
+
+.traffic__ship__tables span:nth-child(1) {
+  left: 10px;
+}
+
+.traffic__ship__tables span:nth-child(2) {
+  left: 70px;
+}
+
+.traffic__ship__tables span:nth-child(3) {
+  left: 130px;
+}
+
+.traffic__ship__tables span:nth-child(4) {
+  left: 190px;
+}
+
+.traffic__ship__tables span:nth-child(5) {
+  left: 250px;
+}
+
+.traffic__ship__tables span:nth-child(6) {
+  left: 310px;
+}
+
+.traffic__ship__tables span:nth-child(7) {
+  left: 370px;
+}
+
+.traffic__ship__tables span:nth-child(8) {
+  left: 430px;
+}
+
+.traffic__ship__tables span:nth-child(9) {
+  left: 490px;
+}
+
+.traffic__ship__tables span:nth-child(10) {
+  left: 550px;
+}
+
+.traffic__ship__tables span:nth-child(11) {
+  left: 610px;
+}
+
+.traffic__ship__tables span:nth-child(12) {
+  left: 670px;
+}
+
+.traffic__ship__tables span:nth-child(13) {
+  left: 730px;
+}
+
+.traffic__ship__tables span:nth-child(14) {
+  left: 790px;
+}
+
+.traffic__ship__tables span:nth-child(15) {
+  left: 850px;
+}
+
+.traffic__ship__tables__title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+
+.traffic__ship__tables__title li {
+  text-align: center;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  padding-top: 30px;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+  cursor: pointer;
+  position: relative;
+  background-color: #8FC7F9;
+}
+
+.traffic__ship__tables__title li.active {
+  background-color: #3DA3FF;
+}
+
+.traffic__ship__tables__title li:nth-child(2) {
+  background-color: #E9EDC9;
+}
+
+.traffic__ship__tables__title li:nth-child(2).active {
+  background-color: #C6D16C;
+}
+
+.traffic__ship__tables__title li:nth-child(3) {
+  background-color: #FFD15B;
+}
+
+.traffic__ship__tables__title li:nth-child(3).active {
+  background-color: #FFB72A;
+}
+
+.traffic__ship__tables__title li span {
+  display: inline-block;
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  background-color: white;
+  border-radius: 50%;
+  top: -27px;
+  left: 0;
+}
+
+.traffic__ship__tables__title li span:nth-child(1) {
+  left: 10px;
+}
+
+.traffic__ship__tables__title li span:nth-child(2) {
+  left: 70px;
+}
+
+.traffic__ship__tables__title li span:nth-child(3) {
+  left: 130px;
+}
+
+.traffic__ship__tables__title li span:nth-child(4) {
+  left: 190px;
+}
+
+.traffic__ship__tables__title li span:nth-child(5) {
+  left: 250px;
+}
+
+.traffic__ship__tables table {
+  width: 80%;
+  margin: 20px auto;
+  border-collapse: collapse;
+  border: 1px solid black;
+}
+
+.traffic__ship__tables td {
+  border: 1px solid black;
+  text-align: center;
+  padding: 10px;
+}
+
 .traffic__ship a {
   display: inline-block;
   background-color: #FFB72A;
