--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,7 @@ table {
   border-spacing: 0;
 }
 
-.header__home, .event button, .map, .destinations__items__title {
+.map, .destinations__items__title {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -65,7 +65,7 @@ table {
           align-items: center;
 }
 
-.navbar, .event__container, .event__info {
+.navbar, .event__info {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -123,13 +123,13 @@ table {
           align-items: flex-end;
 }
 
-.header__home, .header__about-us, .header__stay, .header__attractions, .header__news, .header__events, .header__food, .header__traffic, .footer::before {
+.header__about-us, .header__stay, .header__attractions, .header__news, .header__events, .header__food, .header__traffic, .footer::before {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 
-.hotel__introduce__contact-address::before, .hotel__introduce__contact-phone::before {
+.hotel__introduce__contact-address::before {
   background-position: center;
   background-size: cover;
 }
@@ -182,10 +182,73 @@ body {
   font-family: 'Noto Sans TC', sans-serif;
   line-height: 1.4;
   letter-spacing: 2px;
+  position: relative;
 }
 
 a {
   text-decoration: none;
+}
+
+.back-top {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 100;
+}
+
+.back-top img {
+  width: 40px;
+}
+
+.back-top :hover {
+  -webkit-animation: swing 1s infinite;
+          animation: swing 1s infinite;
+}
+
+@-webkit-keyframes swing {
+  15% {
+    -webkit-transform: translateY(5px);
+            transform: translateY(5px);
+  }
+  40% {
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
+  }
+  65% {
+    -webkit-transform: translateY(2px);
+            transform: translateY(2px);
+  }
+  85% {
+    -webkit-transform: translateY(-2px);
+            transform: translateY(-2px);
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+
+@keyframes swing {
+  15% {
+    -webkit-transform: translateY(5px);
+            transform: translateY(5px);
+  }
+  40% {
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
+  }
+  65% {
+    -webkit-transform: translateY(2px);
+            transform: translateY(2px);
+  }
+  85% {
+    -webkit-transform: translateY(-2px);
+            transform: translateY(-2px);
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
 }
 
 .navbar {
@@ -199,6 +262,10 @@ a {
 
 .navbar__logo img {
   width: 100%;
+}
+
+.navbar__logo img:hover {
+  opacity: 0.5;
 }
 
 .navbar__link {
@@ -219,6 +286,10 @@ a {
 .navbar__link a {
   padding-left: 40px;
   color: #123C62;
+}
+
+.navbar__link a:hover {
+  color: #8FC7F9;
 }
 
 .navbar__link-sub {
@@ -259,12 +330,23 @@ a {
 }
 
 .header__home {
-  background-image: url(../public/picture/header-cover/home.png);
-  color: #ffffff;
+  position: relative;
+}
+
+.header__home div {
+  width: 100%;
+  height: inherit;
+}
+
+.header__home div img {
+  width: 100%;
+  height: inherit;
 }
 
 .header__home__title {
-  font-size: 3.125rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
 }
 
 .header__about-us {
@@ -323,7 +405,7 @@ main {
 .footer {
   background-color: #3DA3FF;
   width: 100%;
-  height: 300px;
+  height: 400px;
   position: relative;
   color: #ffffff;
   -webkit-box-sizing: content-box;
@@ -341,10 +423,23 @@ main {
   height: 200px;
 }
 
+.footer__logo {
+  width: 350px;
+  height: 400px;
+  text-align: center;
+}
+
 .footer__logo h3 {
   margin-top: 20px;
   font-size: 1.875rem;
-  text-align: center;
+}
+
+.footer__logo img {
+  width: 80%;
+}
+
+.footer__logo img:hover {
+  opacity: 0.5;
 }
 
 .footer__info__contact-e {
@@ -361,26 +456,32 @@ main {
   margin: 20px 0;
 }
 
-.footer__info__email::before {
-  display: inline-block;
-  content: '';
-  margin-right: 10px;
-  background-image: url(../public/icon/email.png);
-  width: 25px;
-  height: 25px;
+.footer__info__email a {
+  color: white;
+}
+
+.footer__info__email a:hover {
+  color: #B8DDFF;
+}
+
+.footer__info__email a:hover img {
+  opacity: 0.5;
 }
 
 .footer__info__phone {
   margin-top: 10px;
 }
 
-.footer__info__phone::before {
-  display: inline-block;
-  content: '';
-  margin-right: 10px;
-  background-image: url(../public/icon/phone.png);
-  width: 25px;
-  height: 25px;
+.footer__info__phone a {
+  color: white;
+}
+
+.footer__info__phone a:hover {
+  color: #B8DDFF;
+}
+
+.footer__info__phone a:hover img {
+  opacity: 0.5;
 }
 
 .footer__visits-e {
@@ -400,6 +501,10 @@ main {
   margin-right: 20px;
   width: 25px;
   height: 25px;
+}
+
+.footer__visits img:hover {
+  opacity: 0.5;
 }
 
 .footer__copyright {
@@ -426,12 +531,36 @@ main {
   width: 93%;
   margin-left: 70px;
   font-size: 1.5rem;
+  margin-top: 100px;
   padding: 20px 0;
   color: #3DA3FF;
 }
 
+.event__title:hover {
+  color: #5B7893;
+}
+
+.event__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .event__item {
-  width: 26%;
+  width: 25%;
+  margin: 0 20px;
+}
+
+.event__item:hover img {
+  opacity: 0.5;
+}
+
+.event__item:hover h3 {
+  color: #5B7893;
+}
+
+.event__item:hover a {
+  color: #5B7893;
 }
 
 .event__item img {
@@ -452,33 +581,14 @@ main {
   font-size: 0.875rem;
 }
 
-.event button {
-  width: 40px;
-  height: 40px;
-  border: none;
-  border-radius: 50%;
-  position: absolute;
-  background-color: #BEBEBE;
-  color: #ffffff;
-  cursor: pointer;
-}
-
-.event__button-1 {
-  top: 21vh;
-  left: -5.946%;
-}
-
-.event__button-2 {
-  top: 21vh;
-  right: -5.946%;
-}
-
 .map {
-  margin-top: 20px;
+  margin-top: 150px;
 }
 
 .map__deer {
   width: 16.49%;
+  margin-bottom: 100px;
+  margin-right: 10px;
 }
 
 .map__location {
@@ -486,6 +596,7 @@ main {
   border: 2px solid #3DA3FF;
   border-radius: 40px;
   margin-left: 10px;
+  margin-bottom: 100px;
 }
 
 .map__location img {
@@ -501,7 +612,12 @@ main {
 .news__title {
   font-size: 1.5rem;
   padding: 20px 0;
-  color: #3DA3FF;
+  color: #3da3ff;
+  margin-top: 150px;
+}
+
+.news__title:hover {
+  color: #8FC7F9;
 }
 
 .news__icon {
@@ -540,9 +656,13 @@ main {
   padding-bottom: 20px;
 }
 
-.news__content li p {
+.news__content li a {
   font-size: 1.125rem;
   color: #123C62;
+}
+
+.news__content li a:hover {
+  color: #8FC7F9;
 }
 
 .news__date {
@@ -604,13 +724,17 @@ main {
   display: inline-block;
 }
 
-.hotel__introduce__contact-phone::before {
-  display: inline-block;
-  margin-left: 30px;
-  content: '';
-  background-image: url(../public/icon/blackicon/phone.png);
+.hotel__introduce__contact-phone img {
   width: 25px;
   height: 25px;
+}
+
+.hotel__introduce__contact-phone a {
+  color: #123C62;
+}
+
+.hotel__introduce__contact-phone a:hover {
+  color: #3DA3FF;
 }
 
 .hotel__feature {
@@ -654,6 +778,10 @@ main {
   text-align: end;
   margin: 40px 10%;
   color: #7C7C7C;
+}
+
+.hotel__link:hover {
+  color: #3DA3FF;
 }
 
 .tourist-spots__link > li {
@@ -720,6 +848,10 @@ main {
   padding-top: 20px;
   position: relative;
   cursor: pointer;
+}
+
+.info__title:hover {
+  color: #5B7893;
 }
 
 .info__title__button {
@@ -810,6 +942,14 @@ main {
   margin-bottom: 40px;
 }
 
+.events__cards:hover img {
+  opacity: 0.5;
+}
+
+.events__cards:hover span {
+  background-color: #3DA3FF;
+}
+
 .events__cards__image {
   width: 100%;
   margin: 0 auto;
@@ -883,6 +1023,14 @@ main {
   font-size: 1.125rem;
 }
 
+.detal__back:hover a {
+  color: #3DA3FF;
+}
+
+.detal__back:hover div {
+  background-color: #3DA3FF;
+}
+
 .detal__back a {
   color: #8FC7F9;
 }
@@ -894,6 +1042,7 @@ main {
   height: 30px;
   border-radius: 50%;
   background-color: #8FC7F9;
+  cursor: pointer;
 }
 
 .detal__back__button::before, .detal__back__button::after {
@@ -930,6 +1079,10 @@ main {
   margin-bottom: 40px;
   text-align: center;
   border-radius: 40px;
+}
+
+.foods__link > li:hover {
+  background-color: #123C62;
 }
 
 .foods__link > li a {
@@ -979,6 +1132,16 @@ main {
   background-color: #FFB72A;
 }
 
+.food__card-1__info a:hover {
+  background-color: #ffd15b;
+  -webkit-transition: -webkit-box-shadow 0.2s;
+  transition: -webkit-box-shadow 0.2s;
+  transition: box-shadow 0.2s;
+  transition: box-shadow 0.2s, -webkit-box-shadow 0.2s;
+  -webkit-box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1), 0 5px 5px 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1), 0 5px 5px 0 rgba(0, 0, 0, 0.1);
+}
+
 .food__card-2 {
   text-align: end;
   position: relative;
@@ -1016,6 +1179,16 @@ main {
   font-size: 1.125rem;
   color: #ffffff;
   background-color: #FFB72A;
+}
+
+.food__card-2__info a:hover {
+  background-color: #ffd15b;
+  -webkit-transition: -webkit-box-shadow 0.2s;
+  transition: -webkit-box-shadow 0.2s;
+  transition: box-shadow 0.2s;
+  transition: box-shadow 0.2s, -webkit-box-shadow 0.2s;
+  -webkit-box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1), 0 5px 5px 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1), 0 5px 5px 0 rgba(0, 0, 0, 0.1);
 }
 
 .traffic {
@@ -1141,6 +1314,7 @@ main {
   cursor: pointer;
   position: relative;
   background-color: #8FC7F9;
+  color: white;
 }
 
 .traffic__ship__tables__title li.active {
@@ -1149,6 +1323,7 @@ main {
 
 .traffic__ship__tables__title li:nth-child(2) {
   background-color: #E9EDC9;
+  color: #123C62;
 }
 
 .traffic__ship__tables__title li:nth-child(2).active {
@@ -1214,6 +1389,16 @@ main {
   margin-top: 20px;
   padding: 10px 20px;
   border-radius: 20px;
+}
+
+.traffic__ship a:hover {
+  background-color: #ffd15b;
+  -webkit-transition: -webkit-box-shadow 0.2s;
+  transition: -webkit-box-shadow 0.2s;
+  transition: box-shadow 0.2s;
+  transition: box-shadow 0.2s, -webkit-box-shadow 0.2s;
+  -webkit-box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1), 0 5px 5px 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1), 0 5px 5px 0 rgba(0, 0, 0, 0.1);
 }
 
 .traffic__park {
