--- a/assets/sass/component/events/_detal.scss
+++ b/assets/sass/component/events/_detal.scss
@@ -25,6 +25,14 @@
 		justify-content: flex-end;
 		margin-top: 20px;
 		font-size: $font-navbar;
+		&:hover{
+			a{
+				color:#3DA3FF;
+			}
+			div{
+				background-color: #3DA3FF;
+			}
+		}
 		a{
 			color: $color-accent-blue;
 		}
@@ -35,6 +43,7 @@
 			height: 30px;
 			border-radius: 50%;
 			background-color: $color-accent-blue;
+			cursor: pointer;
 			&::before,&::after{
 				position: absolute;
 				display: block;
