--- a/assets/sass/component/food/_food.scss
+++ b/assets/sass/component/food/_food.scss
@@ -9,6 +9,9 @@
 			margin-bottom: $margin-large;
 			text-align: center;
 			border-radius: $border-radius-base;
+			&:hover{
+				background-color:#123C62 ;
+			}
 
 			a{
 				font-size: $font-link;
